plugins {
	id "org.jetbrains.gradle.plugin.idea-ext" version "1.1.7"
}

subprojects {
	apply plugin: 'java'

	java.toolchain.languageVersion = JavaLanguageVersion.of(17)

	repositories {
		mavenCentral()
	}

	tasks.withType(JavaCompile).configureEach {
		it.options.encoding = 'UTF-8'
		it.options.getRelease().set(17)
	}

	tasks.withType(GenerateModuleMetadata).configureEach {
		enabled = false
	}

	tasks.withType(Jar).all {
		duplicatesStrategy 'include'
	}
}